--- a/Kalman_draft.ipynb
+++ b/Kalman_draft.ipynb
@@ -398,7 +398,7 @@
     "        self.P = F_t @ self.P @ F_t.T + Q\n",
     "\n",
     "\n",
-    "    def update(self, acc_k, mag_k):\n",
+    "    def correct(self, acc_k, mag_k):\n",
     "        Epsilon = self.calculate_epsilon(acc_k, mag_k)\n",
     "\n",
     "        # R = self.calculate_erros(acc_k, mag_k)\n",
@@ -5546,7 +5546,7 @@
     "    (acc_temp, gyro_temp, mag_temp) = acc[current_frame], gyro[current_frame], normalize_array(mag[current_frame])\n",
     "\n",
     "    kf.propagate(gyro_temp)\n",
-    "    kf.update(acc_temp, mag_temp)\n",
+    "    kf.correct(acc_temp, mag_temp)\n",
     "\n",
     "    (roll, pitch, yaw) = get_euler_angles(kf.q)\n",
     "    roll_data.append(roll)\n",
